ajout de la currentListBook

--- a/book-shop/src/app/list-books/list-books.component.html
+++ b/book-shop/src/app/list-books/list-books.component.html
@@ -17,7 +17,7 @@
           </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let b of listFiltredBook">
+        <tr *ngFor="let b of currentListBook">
             <td>{{ b.id }}</td>
             <td>{{ b.title }}</td>
             <td>{{ b.author }}</td>
