Ajout des routes

--- a/book-shop/src/app/app.component.html
+++ b/book-shop/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="container"> 
 
-<app-list-books/>
-
+<!--app-list-books/-->
+<ul>
+    <li><a routerLink="/List">Lister</a></li>
+    <li><a routerLink="/Add">Ajouter</a></li>
+    <li><a routerLink="/Edit">Editer</a></li>
+</ul>
+<router-outlet> </router-outlet>
 </div>
