--- a/book-shop/src/app/app.component.html
+++ b/book-shop/src/app/app.component.html
@@ -1,10 +1,22 @@
+
 <div class="container"> 
 
-<!--app-list-books/-->
-<ul>
-    <li><a routerLink="/List">Lister</a></li>
-    <li><a routerLink="/Add">Ajouter</a></li>
-    <li><a routerLink="/Edit">Editer</a></li>
-</ul>
-<router-outlet> </router-outlet>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Books</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" routerLink="/List">Lister</a>
+          <a class="nav-link" routerLink="/Add">Ajouter</a>
+          <a class="nav-link" routerLink="/Edit">Editer</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <router-outlet> </router-outlet>
 </div>
