--- a/book-shop/src/app/app.component.html
+++ b/book-shop/src/app/app.component.html
@@ -3,16 +3,18 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Books</a>
+      <a class="navbar-brand"  routerLink="">Book shop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" routerLink="/List">Lister</a>
-          <a class="nav-link" routerLink="/Add">Ajouter</a>
-          <a class="nav-link" routerLink="/Edit">Editer</a>
+         <li>
+          <a class="nav-link" routerLink="/books">Livres</a>
+         </li>
+          <li>
+            <a class="nav-link" routerLink="/authors">Auteurs</a>
+          </li>
         </div>
       </div>
     </div>
