--- a/book-shop/src/app/books/list-books/list-books.component.html
+++ b/book-shop/src/app/books/list-books/list-books.component.html
@@ -25,7 +25,7 @@
             <td>{{ b.id }}</td>
             <td>{{ b.title }}</td>
             <td>{{ b.author }}</td>
-            <td>{{ b.publishDate.toLocaleDateString() }}</td>
+            <td>{{ b.publishDate | date : 'dd/MM/yyyy'}}</td>
             <td>{{ b.price }}</td>
             <td> <button class="btn btn-info" (click)="showdetails(b)">Détails</button></td>
         </tr>
